# pixel-draw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitmap_converter.py
resources/: mainwindow.ui
src/: colorhandler.cpp  colorhandler.h  converter.cpp  converter.h  geometryutils.cpp  geometryutils.h  main.cpp  mainwindow.cpp  mainwindow.h  pathoptimizer.cpp  pathoptimizer.h  svgwriter.cpp  svgwriter.h
